--- a/project-conventions.csproj
+++ b/project-conventions.csproj
@@ -8,4 +8,8 @@
   <ItemGroup>
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="WeatherForecast.cs" />
+    <Compile Remove="Controllers\WeatherForecastController.cs" />
+  </ItemGroup>
 </Project>
