--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/auth/",
+      "launchUrl": "api/user/auth/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "project_conventions": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/auth/",
+      "launchUrl": "api/user/auth/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
