--- a/project-conventions.csproj
+++ b/project-conventions.csproj
@@ -16,4 +16,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="MySql.Data" Version="8.0.18" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controllers\User\" />
+  </ItemGroup>
 </Project>
