--- a/project-conventions.csproj
+++ b/project-conventions.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.0" />
     <PackageReference Include="MySql.Data" Version="8.0.18" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
   </ItemGroup>
 </Project>
